--- a/cim-client/src/main/resources/application.properties
+++ b/cim-client/src/main/resources/application.properties
@@ -14,19 +14,19 @@ cim.msg.logger.path = /opt/logs/cim/
 
 ###=======生产模拟======###
 # 群发消息
-cim.group.route.request.url=http://45.78.28.220:8083/groupRoute
+cim.group.route.request.url=http://alancz.top:8083/groupRoute
 
 # 私聊消息
-cim.p2p.route.request.url=http://45.78.28.220:8083/p2pRoute
+cim.p2p.route.request.url=http://alancz.top:8083/p2pRoute
 
 # 登录并获取服务器ip+port
-cim.server.route.request.url=http://45.78.28.220:8083/login
+cim.server.route.request.url=http://alancz.top:8083/login
 
 # 在线用户
-cim.server.online.user.url=http://45.78.28.220:8083/onlineUser
+cim.server.online.user.url=http://alancz.top:8083/onlineUser
 
 # 清除路由信息
-cim.clear.route.request.url=http://45.78.28.220:8083/offLine
+cim.clear.route.request.url=http://alancz.top:8083/offLine
 
 ###=======本地模拟======###
 ## 群发消息
@@ -45,8 +45,8 @@ cim.clear.route.request.url=http://45.78.28.220:8083/offLine
 #cim.clear.route.request.url=http://localhost:8083/offLine
 
 # 客户端唯一ID
-cim.user.id=1551267098213
-cim.user.userName=test3
+cim.user.id=1563282461392
+cim.user.userName=alancz
 
 # 回调线程队列大小
 cim.callback.thread.queue.size = 2
